# detection-as-code

./: .gitignore  .yamllint  README.md  azure-pipelines.yml  azure_pipelines.yaml  pyproject.toml
.github/workflows/: known-FPs.csv  sigma-test.yml  sigma-validation.yml
detection_as_code/: ConvertedRule.py  convert.py  experiment.py  upload_to_sentinel.py  upload_to_splunk.py
rules/: sysmon_config_modification.yaml
rules/T1059.001/: posh_ps_susp_invocation_generic.yml  suspicious_powershell_cmdlets.yaml
rules/T1059.003/: bypassing_security_controls.yaml  windows_scheduled_task_create_shell.yaml
rules/windows/: win_security_susp_sdelete.yml
rules/windows/T1/: sysmon_config_modification.yaml
rules/windows/T1003.001/: win_security_susp_lsass_dump.yml
rules/windows/T1059.001/: posh_pm_invoke_obfuscation_via_stdin.yml  posh_ps_susp_invocation_generic.yml  (+5 more)
rules_convert/azure/: Bypassing_security_controls.txt  PowerShell_Encodedcommand__Switch.txt  Service_Control_Manager_spawning_Command_Shell_with_suspect_strings.txt  Suspicious_PowerShell_cmdlets.txt  Sysmon_Configuration_Change.txt  Unusual_or_suspicious_process_ancestry.txt  Windows_scheduled_task_create_shell.txt
rules_convert/splunk/: Bypassing_security_controls.txt  PowerShell_Encodedcommand__Switch.txt  Service_Control_Manager_spawning_Command_Shell_with_suspect_strings.txt  Suspicious_PowerShell_cmdlets.txt  Sysmon_Configuration_Change.txt  Unusual_or_suspicious_process_ancestry.txt  Windows_scheduled_task_create_shell.txt
tests/validate-sigma-schema/: validate.sh
workflows/: known-FPs.csv
(+11 files in other folders)
